After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 772979 - Header file contains C++ keyword, failure to compile if included in C++
Header file contains C++ keyword, failure to compile if included in C++
Status: RESOLVED FIXED
Product: tracker
Classification: Core
Component: General
1.10.x
Other Linux
: Normal normal
: ---
Assigned To: tracker-general
tracker-general
Depends on:
Blocks:
 
 
Reported: 2016-10-15 14:20 UTC by Christoph Cullmann
Modified: 2016-10-16 08:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libtracker-sparql: Avoid C++ keyword in variable (1.35 KB, patch)
2016-10-16 08:42 UTC, Carlos Garnacho
committed Details | Review

Description Christoph Cullmann 2016-10-15 14:20:29 UTC
See:

void tracker_namespace_manager_add_prefix (TrackerNamespaceManager *self, const char *prefix, const char *namespace);

in tracker-namespace-manager.h

Please rename the namespace param to e.g. ns.

Thanks!
Comment 1 Carlos Garnacho 2016-10-16 08:42:06 UTC
Thanks for spotting! I'm pushing a fix to master and tracker-1.10

The following fix has been pushed:
15d25b3 libtracker-sparql: Avoid C++ keyword in variable
Comment 2 Carlos Garnacho 2016-10-16 08:42:12 UTC
Created attachment 337782 [details] [review]
libtracker-sparql: Avoid C++ keyword in variable

"namespace" is a C++ keyword, better to avoid in public headers,
spotted by Christoph Cullmann <cullmann@kde.org>.