libtracker-sparql: Avoid C++ keyword in variable

"namespace" is a C++ keyword, better to avoid in public headers,
spotted by Christoph Cullmann <cullmann@kde.org>.

https://bugzilla.gnome.org/show_bug.cgi?id=772979